<resources>
    <string name="app_name">JSManager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="add">Add</string>
    <string name="item_id">Item Id : </string>
    <string name="item_name">Item Name : </string>
    <string name="item_qty">Quantity : </string>
    <string name="item_wt">Weight(gm) : </string>
    <string name="item_purity">Purity(%) : </string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="item_added_successfully">Item added successfully!</string>
    <string name="item_updated_successfully">Item updated successfully!</string>
    <string name="item_removed_successfully">Item removed successfully!</string>
    <string name="one_qty_removed_successfully">One Quantity removed successfully!</string>
    <string name="enter_details">Enter Details</string>
    <string name="update">Update</string>
    <string name="remove">Remove one Quantity</string>
    <string name="remove_all">Remove all Quantities</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_all_items">Are you sure you want to remove all Quantities?</string>
    <string name="remove_single_items">Are you sure you want to remove one Quantity?</string>
    <string name="alert">Alert</string>
    <string name="item_id_already_exists">Item Id already exists. Please modify Item Id and try again!!!</string>
    <string name="ok">OK</string>
    <string name="home_activity">Home</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_item_hint">Search Item…</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="one_gram">One Gram</string>
    <string name="money_laundering">Money Laundering</string>
    <string name="total_categories">Total Categories : </string>
    <string name="total_items">Total Items : </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_quantity">Total Quantity :</string>
    <string name="total_weight">Total Weight(gm) :</string>
    <string name="add_item">Add Item</string>
    <string name="add_category">Add Category</string>
    <string name="remove_stock">Remove Stock</string>
    <string name="remove_category">Remove Category</string>
    <string name="update_item">Update Item</string>

</resources>
