<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gold"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/gold" />
        <item
            android:id="@+id/nav_silver"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/silver" />
        <item
            android:id="@+id/nav_onegram"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/one_gram" />
        <item
            android:id="@+id/nav_money_laundering"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/money_laundering" />
    </group>

    <!-- <item android:title="Communicate">
         <menu>
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
                 android:title="Share" />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Send" />
         </menu>
     </item>-->

</menu>
